--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 justify-content: space-between;
 background-color: #1F2937;}
 
+.header2{background-color: #1F2937;}
 ul
 {display: flex;
 
@@ -23,4 +24,16 @@ color: #e5e7eb;}
     text-align: center;
 }
 
+
 .links {padding: 30px;}
+
+.Info{display: flex;
+justify-content: center;
+padding: 30px;
+gap:10px;}
+
+.Info2{display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap:10px;}
