--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{
     justify-content: center;
-    font-family: roboto;
+    font-family: Roboto sans-serif;
 }
+
 .header 
 {display: flex;
 justify-content: space-between;
@@ -9,7 +10,9 @@ background-color: #1F2937;}
 
 .header2{background-color: #1F2937;
 display: flex;
-justify-content: center;}
+justify-content: center;
+margin-bottom: 300px;
+padding-bottom: 170px;}
 
 ul
 {display: flex;
@@ -35,7 +38,8 @@ color: #e5e7eb;}
 
 .Info{display: flex;
 padding: 30px;
-gap:10px;}
+gap:50px;
+}
 
 .Info2{display: flex;
 flex-direction: column;
@@ -61,6 +65,6 @@ font-weight: bold;}
 
 img {display: flex;
 flex:1;
-max-width:400px ;
+max-width :700px ;
 height: auto;
 border-radius: 12px;}
