--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ background-color: #1F2937;}
 .header2{background-color: #1F2937;
 display: flex;
 justify-content: center;
-margin-bottom: 300px;
 padding-bottom: 170px;}
 
 ul
@@ -68,3 +67,26 @@ flex:1;
 max-width :700px ;
 height: auto;
 border-radius: 12px;}
+
+.ourWork{display: flex;
+flex-direction: column;
+align-items: center;}
+
+.text3 h1{
+    color:#1F2937;
+    font-size: 36px;
+}
+
+.imgCards{
+    display: flex;
+    justify-content: center;
+    gap:30px;
+}
+.image1{
+    display: flex;
+    flex-direction: column;
+    border-width: 5px;
+    border-style: solid;
+    border-color: rgb(236, 87, 87);
+    wid
+}
