--- a/style.css
+++ b/style.css
@@ -110,5 +110,15 @@ margin-bottom: 20px;
 .footer {background-color: #1F2937;
 display: flex;
 justify-content: center;
-gap:50px;
+gap:100px;
+padding: 10;
+padding-bottom: 100px;
 }
+ .text6 {font-size: 21px;
+color: #f9faf8;
+padding-top: 100px;
+text-align: center;}
+
+.button {padding: 10px;
+color: #f9faf8;
+padding-top: 100px;}
