--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ padding-bottom: 100px;
 }
  .text6 {font-size: 21px;
 color: #f9faf8;
-padding-top: 100px;
+padding-top: px;
 text-align: center;}
 
 .button {padding: 10px;
