--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ body{
 .header 
 {display: flex;
 justify-content: space-between;
-background-color:#e5e7eb;
+background-color: #e5e7eb;
 margin-bottom: 10px;
-border-bottom: 10px solid  #edad06;}
+border-bottom: 10px solid #1f6521;}
 
 .logoContainer {display: flex;}
 
-.header2{background-color: rgb(103,185,50);
+.header2{background-color:#1f2205;
 display: flex;
 justify-content: center;
 padding-bottom: 170px;}
@@ -25,7 +25,7 @@ list-style: none;}
 a 
 {
 text-decoration: none;
-color:#1F2937;}
+color:#1f2205;}
 
 .logo{
     padding: 30px;
@@ -57,17 +57,23 @@ flex: 1;}
 
  h1{font-size: 48px;
 font-weight:bolder;
-color: #f9faf8;}
+color: #1f2205;}
+.heading h1 , .heading2 h1{
+    color: #e5e7eb
+}
 
 .text {font-size: 18px;
 color: #e5e7eb;}
 
+.button a{ color:#e5e7eb}
+
 button{border-radius: 1px;
-background-color: #edad06;
+background-color: #53900f;
 padding: 8px;
 width: 160px;
 font-size: 21px;
-font-weight: bold;}
+font-weight: bold;
+color: #e5e7eb;}
 
 img {display: flex;
 flex:1;
@@ -128,5 +134,4 @@ padding-top: px;
 text-align: center;}
 
 .button {padding: 10px;
-color: #f9faf8;
-padding-top: 100px;}
+color: #f9faf8;}
