--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ align-items: center;}
     flex-direction: column;
     border-width: 5px;
     border-style: solid;
-    border-color: rgb(236, 87, 87);
+    border-color:#1f6521;
     max-width: 400px;
     height: auto;
 }
@@ -142,4 +142,5 @@ padding-top: px;
 text-align: center;}
 
 .button {padding: 10px;
-color: #f9faf8;}
+color: #f9faf8;
+margin-top: 30px;}
