Change navbar links/add dropdown menu
changed the links and added another dropdown menu on the navigation bar

--- a/style.css
+++ b/style.css
@@ -182,6 +182,11 @@ font-size: 20px;}
         background-color: #e5e7eb;
         gap: 15px;
     }
+    .dropdown2{display: none;
+        flex-direction: column;
+    position: absolute;
+        background-color: #e5e7eb;
+    }
     
     .links ul li ul.dropdown li a:hover {
         background-color: darkgray; 
@@ -189,22 +194,17 @@ font-size: 20px;}
     
     .links ul li ul.dropdown {width: 180px;
     border-radius: 0 0 4px 4px;
-    display: none;}
+    display: none;
+    padding: 10px;}
     
     .links ul li:hover ul.dropdown {
         display: flex;
         flex-direction: column;
     }
-    
-    
     nav {width: 100%;}
     
     
-    .dropdown2{display: none;
-        flex-direction: column;
-    position: absolute;
-        background-color: #e5e7eb;
-    }
+   
     
     
     
