--- a/style.css
+++ b/style.css
@@ -204,16 +204,58 @@ font-size: 20px;}
         display: flex;
         flex-direction: column;
     }
-    nav {width: 100%;}
-    
-    
-   
-    
-    
-    
-    
+    nav {width: 100%;} 
     .links ul li:hover ul.dropdown2{display: flex;}
     
+
+    /*carousel*/
+    
+    .carousel{
+        overflow: hidden;
+        width: 100vw;
+        height: 100vh;
+        position: relative;
+        
+    }
+    
+    
+    .carousel .img { position: absolute;
+        top:0;
+        left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+        animation: slider 20s infinite;
+        }
+    .carousel .Slide1{
+        background-image: url(Media/Picking%20crops.jpg);
+        animation-delay: -0s;}
+    .carousel .Slide2{background-image: url(Media/popo%20farmer.jpg);
+        animation-delay: -4s;}
+    .carousel .Slide3{background-image: url(Media/people%20picking%20rice.jpg);
+        animation-delay: -8s;}
+    .carousel .Slide4{background-image: url(Media/People%20picking%20ifishimu.jpg);
+        animation-delay: -12s;}
+    .carousel .Slide5{background-image: url(Media/Picking%20crops.jpg);
+        animation-delay: -16s;}
+    
+    @keyframes slider {
+        0%,16%,100% {
+            margin-left:0;
+            animation-timing-function: ease;
+        }
+        
+        20%{
+            margin-left:  -100%;
+            animation-timing-function: step-end;
+            
+        }
+        96% {margin-left: 100%;
+            animation-timing-function: ease;
+            
+        }
+    }
 
 
 
