--- a/style.css
+++ b/style.css
@@ -80,7 +80,9 @@ color: #1f2205;}
     color: #e5e7eb;}
 
 .text {font-size: 23px;
-color: #e5e7eb;}
+color: #e5e7eb;
+padding: 20px;}
+
 p {text-align: center;}
 
 .button a{ color:#e5e7eb}
@@ -217,6 +219,7 @@ font-size: 20px;}
         width: 100vw;
         height: 100vh;
         position: relative;
+    ;
         
     }
     
@@ -227,9 +230,11 @@ font-size: 20px;}
     width: 100%;
     height: 100%;
     background-size: cover;
+    opacity: .8;
+    
     background-position: center;
         animation: slider 20s infinite;
-        }
+       }
     .carousel .Slide1{
         background-image: url(Media/Picking%20crops.jpg);
         animation-delay: -0s;}
@@ -260,6 +265,27 @@ font-size: 20px;}
     }
 
 
+
+
+    .carousel .img .text {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding: 30px;
+        font-size: 50px;
+        text-align: center;
+        color: white;
+        max-width: 60%;
+    }
+    .overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.5);
+        z-index: -1;
+
+    }
+    P {box-shadow: 2px;}
 
 
 @media (max-width:768px){
