--- a/style.css
+++ b/style.css
@@ -168,16 +168,19 @@ color: #f9faf8;
 padding-top: px;
 text-align: center;}
 
-.button {padding: 10px;
+.button {
 color: #f9faf8;
-margin-top: 30px;
-display: flex;
-flex-direction: column;
+margin-top: 30px
+flex-direction: row;
 justify-content: center;}
 
 .text7 p {color:#f9faf8;
 font-size: 20px;}
 
+.img {display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;}
 
 /*dropdown menu*/
 
@@ -295,23 +298,33 @@ font-size: 20px;}
     .logoContainer{flex-direction: column;
     align-items: center;}
 
-    img {max-width: 100%;
+    img , .img {max-width: 100%;
     height: auto;}
     
     .name { 
         margin: -15px 0px 0px 0px;
     }
-    .heading{max-width: 100%;}
+    .heading, .carousel {max-width: 100%;}
+
+    p {padding: 10px;
+    width: 100%;
+height:fit-content;
+font-size: 35px;}
 
     h1 {text-align: center;}
     .Info {padding: 30px 0px 0px 0px;}
     .Info2{padding-left: 0;
     gap: 20px;}
 
-   .header .links {
-        position: sticky;
-z-index: 999;
-top: 0;
-width: 100%;}
+.links {
+ margin-top: -70px;
+}
+
+.links ul li {width: 100%;
+white-space: nowrap;
+gap: 10px;}
+
+.logoContainer .name{display: none;}
+
     }
     
