--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+/*
 *{padding: 0;
 margin: 0;}
 body{
@@ -180,8 +182,7 @@ flex-direction: column;
 align-items: center;
 justify-content: center;}
 
-/*dropdown menu*/
-
+/*dropdown menu 
 .links ul li {
     position: relative;}
     
@@ -214,7 +215,7 @@ justify-content: center;}
     
 
     /*carousel*/
-
+/*
     .carousel{
         overflow: hidden;
         width: 100vw;
