--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,600;0,900;1,100;1,200&display=swap');
 
-body, button {font-family: 'Poppins', sans-serif};
+body, button {font-family: 'Poppins', sans-serif}
 
 
-/*
-*{padding: 0;
-margin: 0;}
+
+* {padding: 0;
+margin: 0;
+box-sizing: border-box;}
+
+
+ /*
 body{
     justify-content: center;
     font-family: Roboto sans-serif;
