Set fullContainer Width to 100%. set container width to 1140px and margin to auto.

--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@ body, button {font-family: 'Poppins', sans-serif}
 margin: 0;
 box-sizing: border-box;}
 
+.fullContainer{
+    width: 100%;
+}
+.container {
+    margin: auto;
+    width: 1140px;
+}
+
 
  /*
 body{
