--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@
 
 body, button {font-family: 'Poppins', sans-serif}
 
-
-
 * {padding: 0;
 margin: 0;
 box-sizing: border-box;}
@@ -22,23 +20,21 @@ background-color: rgba(0, 0, 0, 0.6);
 position: fixed;
 z-index: 2;}
 
+header .container 
+{display: flex;
+justify-content: space-between;}
 
- /*
-body{
-    justify-content: center;
-    font-family: Roboto sans-serif;
-    overflow-x: hidden;
+header .container .logo {
+    padding: 15px 0;
+    height: 75px;
 }
 
-.header 
-{display: flex;
-justify-content: space-between;
-background-color: #e5e7eb;
-border-bottom: 10px solid #1f6521;
-position: sticky;
-z-index: 999;
-top: 0;
-width: 100%;}
+header .container .logo img {
+    height: 100%;
+}
+
+
+/*
 
 .logoContainer {display: flex;}
 
