--- a/style.css
+++ b/style.css
@@ -33,7 +33,23 @@ header .container .logo img {
     height: 100%;
 }
 
+header nav ul {
+    list-style-type: none;
+}
+header nav ul li{
+    display: inline-block;
+}
 
+header nav ul li a {
+    display: inline-block;
+    height: 75px;
+    line-height: 75px;
+    padding: 0 15px;
+    text-decoration: none;
+    text-transform: capitalize;
+    font-size: 16px;
+    color: #fff;
+}
 /*
 
 .logoContainer {display: flex;}
