--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,600;0,900;1,100;1,200&display=swap');
 
+:root {
+    --theme: #e43a47;
+    --gray : #efefef;
+}
+
 body, button {font-family: 'Poppins', sans-serif}
 
 * {padding: 0;
@@ -49,6 +54,11 @@ header nav ul li a {
     text-transform: capitalize;
     font-size: 16px;
     color: #fff;
+    transition: 1s;
+}
+
+header nav ul li a:hover{
+    background-color:var(--theme)
 }
 /*
 
