--- a/style.css
+++ b/style.css
@@ -54,11 +54,25 @@ header nav ul li a {
     text-transform: capitalize;
     font-size: 16px;
     color: #fff;
-    transition: 1s;
+    transition: 0.3s;
 }
 
 header nav ul li a:hover{
     background-color:var(--theme)
+}
+
+.banner {
+ min-height: 100vh;
+    width: 100%;
+    background-image: url(/Media/popo\ farmer.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+
+}
+
+.banner h1 {
+    margin-top: 230px;
+    
 }
 /*
 
