--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header nav ul li a:hover{
 .banner {
  min-height: 100vh;
     width: 100%;
-    background-image: url(/Media/popo\ farmer.jpg);
+    background-image: url(/Media/SunsetFarm.jpg);
     background-size: cover;
     background-attachment: fixed;
 
@@ -72,7 +72,20 @@ header nav ul li a:hover{
 
 .banner h1 {
     margin-top: 230px;
-    
+    display: inline-block;
+    font-size: 3.5rem;
+    color: #fff;
+    text-shadow: 1px 1px, 1px 1px rgba(255, 255, 255, 0.8);
+    width: 50%;
+    font-weight: 400;
+}
+.banner h1 span {
+    background-color: var(--theme);
+    display: inline-block;
+    line-height: 3.5rem;
+    padding: 10px 15px 15px 15px;
+    font-weight: 600px;
+    border-radius: 5px;
 }
 /*
 
