--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ body, button {font-family: 'Poppins', sans-serif}
 margin: 0;
 box-sizing: border-box;}
 
+p {
+    font-size: 14px;
+    line-height: 26px;
+}
+
 .fullContainer{
     width: 100%;
 }
@@ -86,6 +91,13 @@ header nav ul li a:hover{
     padding: 10px 15px 15px 15px;
     font-weight: 600px;
     border-radius: 5px;
+}
+
+.banner p {
+    color: #fff;
+    width: 50%;
+    text-shadow: 0 0 2px #000;
+    margin-top: 10px;
 }
 /*
 
