--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body, button {font-family: 'Poppins', sans-serif}
 margin: 0;
 box-sizing: border-box;}
 
+html{scroll-behavior: smooth;}
+
 p {
     font-size: 14px;
     line-height: 26px;
@@ -205,6 +207,7 @@ margin-top: 15px;}
     background-color: var(--theme);
     color: #fff;   
 }
+
 
 
 /*
