Arrange boxes in a row using grid-template-clmn Set the grid gap to 50 px

--- a/style.css
+++ b/style.css
@@ -214,6 +214,8 @@ margin-top: 15px;}
 
 .OurWork .boxContainer {
     display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap:50px;
 }
 
 /*
