--- a/style.css
+++ b/style.css
@@ -217,6 +217,15 @@ margin-top: 15px;}
     grid-template-columns: repeat(4, 1fr);
     grid-gap:50px;
 }
+.OurWork .boxContainer .Box{
+    background-color: #fff;
+    text-align: center;
+    padding-bottom: 25px;
+    border-radius: 5px;
+    box-shadow: 0 0 3px 0 #c5c5c5;
+    position: relative;
+    margin-bottom: 15px;
+}
 
 /*
 
