--- a/style.css
+++ b/style.css
@@ -230,6 +230,10 @@ margin-top: 15px;}
 .OurWork .boxContainer .Box .ImageCard {
     width: 100%;
     height: 300px;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    overflow: hidden;
 }
 /*
 
