--- a/style.css
+++ b/style.css
@@ -236,6 +236,11 @@ margin-top: 15px;}
     overflow: hidden;
     border-radius: 5px 5px 0 0;
 }
+.OurWork .boxContainer .Box .ImageCard::after{
+    width: 100%;
+    height: 100%;
+    background-position: center;
+}
 /*
 
 .logoContainer {display: flex;}
