--- a/style.css
+++ b/style.css
@@ -236,11 +236,24 @@ margin-top: 15px;}
     overflow: hidden;
     border-radius: 5px 5px 0 0;
 }
-.OurWork .boxContainer .Box .ImageCard::after{
+.OurWork .boxContainer .Box .ImageCard:after{
     width: 100%;
     height: 100%;
     background-position: center;
+    background-size: cover;
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    filter: grayscale(100%);
+    transition: 0.4s;
 }
+
+.OurWork .boxContainer .Box:nth-child(1) .ImageCard,
+.OurWork .boxContainer .Box:nth-child(1).ImageCard:after{
+    background-image: url(Media/Education.jpg);
+}
+
 /*
 
 .logoContainer {display: flex;}
