--- a/style.css
+++ b/style.css
@@ -268,6 +268,14 @@ margin-top: 15px;}
 .OurWork .boxContainer .Box:nth-child(4).ImageCard:after{
     background-image: url(Media/climateChange.jpg);
 }
+
+.OurWork .boxContainer .Box:hover .ImageCard:after{
+    top: 100%;
+}
+.OurWork .boxContainer .Box .WorkTitle {
+    font-size: 16px;
+    margin-top: 15px;
+}
 /*
 
 .logoContainer {display: flex;}
