Add font weight to WorkTitle to make them appealin Cahnged color to #444 to make the words more visible

--- a/style.css
+++ b/style.css
@@ -275,6 +275,8 @@ margin-top: 15px;}
 .OurWork .boxContainer .Box .WorkTitle {
     font-size: 16px;
     margin-top: 15px;
+    font-weight: 600;
+    color: #444;
 }
 /*
 
