Add style to DonationCount Add fontsize and margin to the top

--- a/style.css
+++ b/style.css
@@ -278,6 +278,12 @@ margin-top: 15px;}
     font-weight: 600;
     color: #444;
 }
+.OurWork .boxContainer .Box .donationCount {
+    font-size: 13px;
+    font-weight: 600;
+    color: #444;
+    margin-top: 10px;
+}
 /*
 
 .logoContainer {display: flex;}
