Change position of button change position of button to look more stylish. Set transmformation-transition to -50px Set bottom to -15px.

--- a/style.css
+++ b/style.css
@@ -291,6 +291,9 @@ margin-top: 15px;}
     position:absolute;
     left: 50%;
     background-color: var(--theme);
+    color: #fff;
+    transform: translate(-50%);
+    bottom: -15px;
 }
 /*
 
