Add column count to gallery container add column count to gallery container so that the images are grouped in 4 rows.

--- a/style.css
+++ b/style.css
@@ -300,6 +300,12 @@ margin-top: 15px;}
     outline: none;
     cursor: pointer;
 }
+
+
+.Gallery .galleryContainer {
+    column-count: 4;
+    column-gap: 20px;
+}
 /*
 
 .logoContainer {display: flex;}
