--- a/style.css
+++ b/style.css
@@ -342,6 +342,11 @@ margin-top: 15px;}
     background-image: url(Media/Red-Painted-Wooden-Door-Texture-patternpictures-1813.jpg);
     color: #fff;
 }
+
+.joinUs .joinTitle {
+    font-size: 40px;
+    font-weight: 100;
+}
 /*
 
 .logoContainer {display: flex;}
