--- a/style.css
+++ b/style.css
@@ -347,6 +347,11 @@ margin-top: 15px;}
     font-size: 40px;
     font-weight: 100;
 }
+
+.joinUs .joinTitle span{
+    font-weight: 800;
+}
+
 /*
 
 .logoContainer {display: flex;}
