--- a/style.css
+++ b/style.css
@@ -352,6 +352,28 @@ margin-top: 15px;}
     font-weight: 800;
 }
 
+.joinUs button{
+    padding: 7px 15px;
+    margin-top: 20px;
+    border: 0;
+    outline: none;
+    font-weight: 600;
+    font-size: 16px;
+    background-color: #424242;
+    color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 /*
 
 .logoContainer {display: flex;}
