--- a/style.css
+++ b/style.css
@@ -363,6 +363,13 @@ margin-top: 15px;}
     color: #fff;
 }
 
+footer{
+    background-color: #181818;
+    color:#7f7f7f;
+    padding: 50px 0;
+    font-size: 14px;
+}
+
 
 
 
