--- a/style.css
+++ b/style.css
@@ -376,6 +376,32 @@ footer .container{
     grid-gap: 50px;
 }
 
+footer .title{
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-bottom: 2px solid #7f7f7f;
+    margin-bottom: 30px;
+    padding: 0 0 5px 0;
+}
+footer p {
+    margin-bottom: 10px;
+}
+footer .linksContainer li{
+    list-style-type: none;
+}
+
+footer .linksContainer ul li a {
+    text-decoration: none;
+    color: #7f7f7f;
+    margin-bottom: 10px;
+    display: inline-block;
+}
+footer .newsLetterContainer img {
+    height: 40px;
+    margin-bottom: 10px;
+}
+footer
 
 
 
