--- a/style.css
+++ b/style.css
@@ -372,7 +372,7 @@ footer{
 
 footer .container{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 50px;
 }
 
@@ -401,7 +401,16 @@ footer .newsLetterContainer img {
     height: 40px;
     margin-bottom: 10px;
 }
-footer
+footer .newsLetterContainer input {
+    background-color: transparent;
+    border: 1px solid #7f7f7f;
+    border-radius: 20px;
+    padding: 7px 15px;
+    outline: none;
+    width: 100%;
+    color: #ccc;
+    margin-top: 10px;
+}
 
 
 
