--- a/style.css
+++ b/style.css
@@ -412,9 +412,28 @@ footer .newsLetterContainer input {
     margin-top: 10px;
 }
 
+/* Mobile Responsive Code */
 
+@media screen and (max-width:1140px) {
+    .container{
+        width: 100%;
+        padding: 0 15px;
+}
+@media screen and (max-width:1080px){
+    .banner h1 {
+        margin-top:200px;
+        
+    }
 
-
+    #AbtUsSection .cards {
+        justify-content: space-around;
+        height: auto;
+    }
+    
+    #AbtUsSection .cards > div {
+        margin: 10px 0;
+    }
+}
 
 
 
