--- a/style.css
+++ b/style.css
@@ -434,6 +434,101 @@ footer .newsLetterContainer input {
         margin: 10px 0;
     }
 }
+@media screen and (max-width:1024px) {
+    .banner {background-position-x: 45%;}
+    .banner h1{font-size: 2.5rem;}
+    .OurWork .boxContainer {
+        grid-template-columns: repeat(2,1fr);
+    }
+    
+} 
+@media screen and (max-width:768px) 
+{ header nav {
+    position: relative;
+    border: 2px solid #fff;
+    height: 30px;
+    width: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+}
+header nav::after {top: 17px;}
+header nav::before{top: 7px;}
+Header nav::after,header nav::before {
+    content: "";
+    height: 2px;
+    width: 17px;
+    background-color: #fff;
+    display: block;
+    position: absolute;
+    left: 5px;
+}    
+
+Header nav ul {
+    position: absolute;
+    top: 53px;
+    right: -400px;
+    transition: 0.5s;
+}
+Header nav:hover ul{
+    right: 0;
+}
+header nav ul li {
+    display: block;
+}
+header nav ul li a {
+    line-height: 21px;
+    width: 250px;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+.banner {
+    background-position-x: 65%;
+}
+.banner p {
+    font-size: 14px;
+}
+.banner p, .banner h1{
+    width: 75% ;
+}
+
+#AbtUsSection .cards > div:hover{
+    width: 350px;
+}
+
+.Gallery .galleryContainer{
+    column-count: 2;
+}
+}
+
+@media screen and (max-device-width: 425px) {
+    .banner h1 {
+        margin-top: 150px;
+        font-size: 2rem;
+        line-height: 3rem;
+    }
+
+    .banner button {
+        margin-bottom: 10px;
+    }
+    
+    #AbtUsSection p {
+        text-align: justify;
+    }
+
+#AbtUsSection .cards > div:hover{
+    width: 400px;
+    margin-top: 10px;
+    padding: 35px;
+}
+.OurWork .boxContainer{
+    grid-template-columns: 1fr;
+}
+.Gallery .galleryContainer{
+    column-count: 1;
+}
+footer .container{
+    grid-template-columns: 1fr;
+}
+}
 
 
 
