--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ header nav ul li a:hover{
 .banner {
  min-height: 100vh;
     width: 100%;
-    background-image: url(Kalebalika-NGO/Media/SunsetFarm.jpg);
+    background-image: url(Media/SunsetFarm.jpg);
     background-size: cover;
     background-attachment: fixed;
 
