--- a/style.css
+++ b/style.css
@@ -169,11 +169,22 @@ header nav ul li a:hover{
     left: 0;
     top: 0;
     width: 100%;
-    height: auto%;
+    height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
+    justify-content: center;
+    align-items: center;
 }
 
+.modalContent{
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
+    position: relative;
+    
+    
+}
 
 
 #AbtUsSection .cards{
