--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ header nav ul li a:hover{
     background-color: rgba(0, 0, 0, 0.4);
     justify-content: center;
     align-items: center;
+    display: flex;
 }
 
 .modalContent{
@@ -182,10 +183,22 @@ header nav ul li a:hover{
     border-radius: 8px;
     width: 300px;
     position: relative;
-    
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
+.closeButton{
+    position: absolute;
+    top: -5px;
+    right: 5px;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.donationFormContainer{
+    
+}
 
 #AbtUsSection .cards{
 display: flex;
