--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ header nav ul li a:hover{
     align-items: center;  
 }
 
+#signUpModal{
+    display: flex;
+}
+
 .modalContent{
     background-color: #fff;
     padding: 20px;
@@ -183,7 +187,7 @@ header nav ul li a:hover{
     flex-direction: column;
     justify-content: space-around;
     width: 500px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .closeButton{
@@ -199,13 +203,17 @@ header nav ul li a:hover{
     font-size: 1.2rem;
 }
 .donationFormContainer h1{
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
-.donationFormContainer label{
+
+.signUpFormContainer h1{
+    margin-bottom: 30px;
+}
+.donationFormContainer label, .signUpFormContainer label{
     display: block;
     margin-bottom: 5px;
 }
-.donationFormContainer input{
+.donationFormContainer input, .signUpFormContainer input{
     width: 100%;
     padding: 8px;
     margin-bottom: 10px;
