--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ header nav ul li a:hover{
     cursor: pointer;
 }
 
-.submitButton{
+.submitButton, .signUpButton{
     padding: 10px;
     font-size: 1em;
     background-color: var(--theme);
